# bondify

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  TESTING.md  docker-compose.yml  hatch_build.py  index.html  nginx.conf  package-lock.json  package.json  pyproject.toml  render.yaml  tailwind.config.ts  wrangler.json
.github/: FUNDING.yml
backend/: .env.example  Dockerfile  Dockerfile.prod  alembic.ini  download_tts_model.py  dump_temp.py  pyproject.toml  requirements.txt  test_api.sh  test_integration.py
backend/.agent/workflows/: db-migrate.md
backend/alembic/: env.py
backend/alembic/versions/: 55b63103687b_add_ai_providers_and_usage_logs.py  5ab9e204e173_initial_schema.py  62777c19d552_add_user_role.py  67d632d4dd35_add_answer_records_table.py  700e7f3b59a3_add_ai_analysis_json_to_reading_articles.py  785d93fb6ead_merge_heads.py  8f3d2e1a9b7c_add_fsrs_fields_to_user_wordlist.py  a1b2c3d4e5f6_add_reading_articles_and_reminder_fields.py  cef8d9add7b0_add_notifications_table.py
backend/app/: cli.py  config.py  database.py  main.py
backend/app/api/: __init__.py  admin.py  analytics.py  auth.py  conversation.py  deps.py  game_questions.py  llm.py  notifications.py  progress.py  reading.py  rephrase.py  srs.py  tts.py  users.py  vocabulary.py  wordlist.py
backend/app/llm/: __init__.py  conversation_agent.py  factory.py  game_question_agent.py  prompts.py  rephrase_agent.py  vocabulary_agent.py
backend/app/models/: __init__.py  achievement.py  ai_provider.py  ai_usage_log.py  answer_record.py  base.py  game_question.py  notification.py  progress.py  reading.py  user.py  user_wordlist.py  vocabulary_cache.py
backend/app/schemas/: __init__.py  analytics.py  auth.py  conversation.py  error.py  llm.py  notification.py  progress.py  reading.py  rephrase.py  user.py  vocabulary.py  wordlist.py
backend/app/services/: __init__.py  achievement_service.py  ai_settings_service.py  analytics_service.py  auth_service.py  game_question_service.py  notification_service.py  progress_service.py  reading_service.py  srs_service.py  tts_service.py  url_extractor.py  vocabulary_service.py  wordlist_service.py
backend/app/utils/: __init__.py
backend/scripts/: change_password.py  create_admin.py  list_users.py  promote_to_admin.py  seed_data.py
backend/seeds/: seed_questions.json  seed_vocabulary.json
docs/: admin.md  architecture.md  deployment.md  game-questions.md  srs.md  tanstack-query.md
src/: App.tsx  index.css
src/admin/: AdminLayout.tsx  ConfirmDialog.tsx  EditQuestionDialog.tsx  api.ts  constants.ts  index.ts
src/contexts/: StatsContext.tsx
src/data/: attentionData.ts  brevityData.ts  clarityData.ts  contextData.ts  dictionData.ts  listeningData.ts  mockConversation.ts  mockVocabularyLookup.ts  pronunciationData.ts  punctuationData.ts  rephraseAnalyzerData.ts  rephraseData.ts  shadowingData.ts  speedReadingData.ts  transitionsData.ts  vocabulary.ts
src/hooks/: useGameProgress.ts  useGameQuestions.ts  (+7 more)
(+68 files in other folders)
