[project]
name = "bondify"
version = "1.0.0"
license = {text = "MIT"}
description = "English Learning Application with AI"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "sillygod", email = "sillygod@livemail.tw" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Education",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "typer>=0.9.0",
    "sqlalchemy>=2.0.25",
    "aiosqlite>=0.19.0",
    "langchain>=0.3.14",
    "langgraph>=0.2.60",
    "langchain-google-genai>=2.0.0",
    "langchain-mistralai>=0.2.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "email-validator>=2.1.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt<4.1.0",
    "python-dotenv>=1.0.0",
    "alembic>=1.18.1",
    "greenlet>=3.3.0",
    "piper-tts>=1.2.0",
    "fsrs>=4.0.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.26.0",
    "hypothesis>=6.92.0",
]

[project.scripts]
bondify = "app.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend/app"]
exclude = [
    ".env",
    ".env.example",
    "*.db",
    "__pycache__",
    ".venv",
    "cache",
    "data",
]
force-include = { "dist" = "app/frontend", "backend/alembic.ini" = "app/alembic.ini", "backend/alembic" = "app/migrations" }

[tool.hatch.build.hooks.custom]
# Enable custom build hook from hatch_build.py

[tool.hatch.metadata]
allow-direct-references = true
