[project]
name = "english-learning-api"
version = "1.0.0"
description = "Backend API for English Learning Application"
readme = "../README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy>=2.0.25",
    "aiosqlite>=0.19.0",
    "langchain>=0.3.14",
    "langgraph>=0.2.60",
    "langchain-google-genai>=2.0.0",
    "langchain-mistralai>=0.2.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "email-validator>=2.1.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt<4.1.0",
    "python-dotenv>=1.0.0",
    "alembic>=1.18.1",
    "greenlet>=3.3.0",
    "piper-tts>=1.2.0",
    "fsrs>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.26.0",
    "hypothesis>=6.92.0",
]


[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.26.0",
    "hypothesis>=6.92.0",
]
